--- a/_config.yml
+++ b/_config.yml
@@ -1,13 +1,13 @@
 # Site settings
-title: Clean Blog
+title: Jiang's Blog
 header-img: img/home-bg.jpg
-email: your-email@yourdomain.com
-description: "Write your site description here. It will be used as your sites meta description as well!"
-baseurl: "/startbootstrap-clean-blog-jekyll"
-url: "http://yourdomain.com"
-twitter_username: SBootstrap
-github_username:  davidtmiller
-facebook_username:  IronSummitMedia
+email: yeah.jiang@mail.utoronto.ca
+description: "Blog for AngularJS, Django, Wordpress and web development related content."
+baseurl: ""
+url: "https://IceBeary.github.io"
+# twitter_username: SBootstrap
+github_username:  IceBeary
+# facebook_username:  IronSummitMedia
 
 # Build settings
 markdown: kramdown
