--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@ header-img: img/home-bg.jpg
 email: yeah.jiang@mail.utoronto.ca
 description: "Blog for AngularJS, Django, Wordpress and web development related content."
 baseurl: ""
-url: "https://IceBeary.github.io"
+url: "http://icebeary.github.io"
 # twitter_username: SBootstrap
 github_username:  IceBeary
 # facebook_username:  IronSummitMedia
