--- a/_config.yml
+++ b/_config.yml
@@ -4,9 +4,9 @@ header-img: img/home-bg.jpg
 email: yeah.jiang@mail.utoronto.ca
 description: "Blog for AngularJS, Django, Wordpress and web development related content."
 baseurl: ""
-url: "http://icebeary.github.io"
+url: "http://eyesbear.github.io"
 # twitter_username: SBootstrap
-github_username:  IceBeary
+github_username:  EyesBear
 # facebook_username:  IronSummitMedia
 
 # Build settings
